--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "electron-vite-react",
+  "name": "emoji-manager",
   "productName": "Electron",
   "private": true,
-  "version": "2.0.0",
-  "description": "Vite React Electron boilerplate.",
-  "author": "xavierShi",
+  "version": "1.0.0",
+  "description": "A tool for mange emoji.",
+  "author": "XavierShi",
   "license": "MIT",
   "main": "dist/electron/main/index.js",
   "scripts": {
@@ -14,16 +14,25 @@
   "engines": {
     "node": "^14.18.0 || >=16.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@arco-design/web-react": "^2.39.1",
+    "@reduxjs/toolkit": "^1.8.5",
+    "react-redux": "^8.0.2"
+  },
   "devDependencies": {
+    "@types/node": "^18.7.11",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.1",
+    "autoprefixer": "^10.4.8",
     "electron": "^20.0.2",
     "electron-builder": "^23.3.3",
+    "less": "^4.1.3",
+    "postcss": "^8.4.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.54.4",
+    "sass": "^1.54.5",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.7.4",
     "vite": "^3.0.7",
     "vite-plugin-electron": "^0.9.0"
