--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
 			"@/*": ["src/*"],
       "styles/*": ["src/assets/styles/*"]
 		},
+    "types": ["node"],
     "allowJs": false,
     "skipLibCheck": true,
     "esModuleInterop": false,
